--- a/cuda/Makefile
+++ b/cuda/Makefile
@@ -2,7 +2,7 @@
 #CUDADIR=/opt/cuda
 #CUDA_SDK_DIR=/opt/cuda/sdk
 
-INCFLAG=-I$(CUDADIR)/include -I$(CUDA_SDK_DIR)/C/common/inc -I..
+INCFLAG=-I$(CUDADIR)/include # -I$(CUDA_SDK_DIR)/C/common/inc -I..
 
 
 # CUDA code generation flags
@@ -21,7 +21,7 @@ NVCC = nvcc
 
 #NVCCFLAGS = -O3 $(INCFLAG)  --use_fast_math $(GENCODE_SM13) #use to compile on l2gpu with GTX285
 #NVCCFLAGS = -O3 $(INCFLAG)  --use_fast_math $(GENCODE_SM20)
-NVCCFLAGS = -O3 $(INCFLAG)  --use_fast_math $(GENCODE_FLAGS)
+NVCCFLAGS = -O3 $(INCFLAG)  --use_fast_math $(GENCODE_FLAGS) #-Xcompiler "-std=c++11"
 
 
 #LIBS=-L/home/wittich/src/cudpp_install_2.0/lib -lcudpp
@@ -31,10 +31,13 @@ NVCCFLAGS = -O3 $(INCFLAG)  --use_fast_math $(GENCODE_FLAGS)
 %.o: %.cu
 	$(NVCC) $(NVCCFLAGS) -c $< -o $@
 
-all: nbody
+all: nbody test
 
 
 nbody: nbody.o
+	$(NVCC) $^ -o $@ 
+
+test: test.o
 	$(NVCC) $^ -o $@ 
 
 
