edits on airplane

--- a/tbb/Makefile
+++ b/tbb/Makefile
@@ -1,11 +1,16 @@
 
 #CC=clang
 CFLAGS=-O3
-CXXFLAGS=-O3 -std=c++11
+CXXFLAGS=-O3 -std=c++11 -g
 LIBSDIR=
 
-all: nbody
-
+all: nbody nbody_soa
 
 nbody: nbody.o
 	$(CXX) $(CXXFLAGS) -ltbb -o $@ $<
+
+nbody_soa: nbody_soa.o
+	$(CXX) $(CXXFLAGS) -ltbb -o $@ $<
+
+clean:
+	$(RM) *.o nbody nbody_soa
