make compile with NVIDIA opencl, doesn't work with k20

--- a/opencl/makefile
+++ b/opencl/makefile
@@ -1,5 +1,8 @@
-CFLAGS=-O3
-CXXFLAGS=-O3
+CC=gcc
+CFLAGS=-O3 -I ${CUDADIR}/include  -std=gnu99
+CXXFLAGS=-O3 -I ${CUDADIR}/include 
+OPENCLLIBS=-L/nfs/opt/cuda/lib -lOpenCL
+LIBS=$(OPENCLLIBS) -lm
 
 all: nbody_simple nbody nbody2
 
@@ -8,14 +11,17 @@ nbody_simple: nbody_simple.o
 	$(CXX) $(CXXFLAGS) -o $@ $<
 
 nbody: nbody.o
-	$(CC) $(CFLAGS) -framework OpenCL -o $@ $<
+	$(CC) $(CFLAGS) $(LIBS) -o $@ $<
 
 nbody2: nbody2.o
-	$(CC) $(CFLAGS) -framework OpenCL -o $@ $<
+	$(CC) $(CFLAGS) $(LIBS) -o $@ $<
+
 dumpcl: dumpcl.o
-	$(CC) $(CFLAGS) -framework OpenCL -o $@ $<
+	$(CC) $(CFLAGS) $(LIBS) -o $@ $<
+
 printcl: printcl.o
-	$(CC) $(CFLAGS) -framework OpenCL -o $@ $<
+	$(CC) $(CFLAGS) $(LIBS) -o $@ $<
+
 
 clean:
 	$(RM) *.o *~
