gcc vectorization args, probably redundant

--- a/cuda/Makefile
+++ b/cuda/Makefile
@@ -17,8 +17,10 @@ GENCODE_SM352   := -gencode=arch=compute_35,code=compute_35
 GENCODE_FLAGS   :=  $(GENCODE_SM35)
 
 NVCC = nvcc
-NVCCFLAGS = -O3 $(INCFLAG)   $(GENCODE_FLAGS) --ptxas-options=-v -lineinfo  -std=c++11
+NVCCFLAGS = -O3 $(INCFLAG)   $(GENCODE_FLAGS) --ptxas-options=-v -lineinfo  -std=c++11 
 #NVCCFLAGS = -G -g $(INCFLAG)   $(GENCODE_FLAGS) --ptxas-options=-v -lineinfo  -std=c++11
+
+NVCCFLAGS += -Xcompiler="-ftree-vectorizer-verbose=4 -ftree-vectorize "#-fopt-info-vec-missed"
 
 CXXFLAGS = $(INCFLAG) -std=c++11
 
