update makefile for ARM cross compiling

--- a/cuda/Makefile
+++ b/cuda/Makefile
@@ -1,8 +1,14 @@
-#CUDADIR=/usr/local/cuda-5.0
-#CUDADIR=/opt/cuda
-#CUDA_SDK_DIR=/opt/cuda/sdk
+# to allow cross compiling on the ARM/Jetson TK1
+# ARM
+ARCH=ARM
+BITS=32
+NVCC_C=arm-linux-gnueabihf-g++
+# x86
+#ARCH=x86
+#BITS=64
+#NVCC_C=g++
 
-INCFLAG=-I. -I/home/wittich/src/tbb43_20150424oss/include -I$(CUDADIR)/include # -I$(CUDA_SDK_DIR)/C/common/inc -I..
+INCFLAG=-I. -I/home/wittich/src/tbb43_20150424oss/include -I$(CUDAINCDIR)
 
 
 # CUDA code generation flags
@@ -10,17 +16,20 @@ GENCODE_SM10    := -gencode arch=compute_10,code=sm_10
 GENCODE_SM13    := -gencode arch=compute_13,code=sm_13
 GENCODE_SM20    := -gencode arch=compute_20,code=sm_20
 GENCODE_SM30    := -gencode arch=compute_30,code=sm_30 
+GENCODE_SM32    := -gencode arch=compute_32,code=sm_32  # Tegra K1
 GENCODE_SM35    := -gencode arch=compute_35,code=sm_35
 GENCODE_SM352   := -gencode=arch=compute_35,code=compute_35
 #GENCODE_FLAGS   := $(GENCODE_SM10) $(GENCODE_SM13) $(GENCODE_SM20) $(GENCODE_SM30) $(GENCODE_SM35)
 #GENCODE_FLAGS   :=  $(GENCODE_SM13) $(GENCODE_SM20) $(GENCODE_SM30) $(GENCODE_SM35) $(GENCODE_SM352)
-GENCODE_FLAGS   :=  $(GENCODE_SM35)
+#GENCODE_FLAGS   :=  $(GENCODE_SM35) $(GENCODE_SM32)
+GENCODE_FLAGS   :=  $(GENCODE_SM32)
 
 NVCC = nvcc
 NVCCFLAGS = -O3 $(INCFLAG)   $(GENCODE_FLAGS) --ptxas-options=-v -lineinfo  -std=c++11 
 #NVCCFLAGS = -G -g $(INCFLAG)   $(GENCODE_FLAGS) --ptxas-options=-v -lineinfo  -std=c++11
 
-NVCCFLAGS += -Xcompiler="-ftree-vectorizer-verbose=4 -ftree-vectorize "#-fopt-info-vec-missed"
+NVCCFLAGS += -Xcompiler="-ftree-vectorizer-verbose=1 -ftree-vectorize "#-fopt-info-vec-missed"
+NVCCFLAGS += -target-cpu-arch=${ARCH} --machine=${BITS} -ccbin arm-linux-gnueabihf-g++ 
 
 CXXFLAGS =  $(INCFLAG) -std=c++11
 
@@ -56,7 +65,7 @@ m2: m2.o
 
 
 ROOTF="-I$(shell root-config --incdir)"
-NVCCFLAGS += $(ROOTF)
+#NVCCFLAGS += $(ROOTF)
 stest: stest.o
 	$(NVCC) $(NVCCFLAGS)  -ltbb $^ -o $@ 
 
@@ -68,30 +77,3 @@ depend:
 
 # DO NOT DELETE
 
-mtest.o: Time.hh Matriplex.h
-nbody.o: timer.h cuda_math.h
-nbody_nothrust.o: /usr/include/sys/stat.h /usr/include/features.h
-nbody_nothrust.o: /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h
-nbody_nothrust.o: /usr/include/gnu/stubs.h /usr/include/gnu/stubs-64.h
-nbody_nothrust.o: /usr/include/bits/types.h /usr/include/bits/typesizes.h
-nbody_nothrust.o: /usr/include/time.h /usr/include/bits/stat.h
-nbody_nothrust.o: /usr/include/sys/types.h /usr/include/endian.h
-nbody_nothrust.o: /usr/include/bits/endian.h /usr/include/bits/byteswap.h
-nbody_nothrust.o: /usr/include/sys/select.h /usr/include/bits/select.h
-nbody_nothrust.o: /usr/include/bits/sigset.h /usr/include/bits/time.h
-nbody_nothrust.o: /usr/include/sys/sysmacros.h
-nbody_nothrust.o: /usr/include/bits/pthreadtypes.h /usr/include/stdio.h
-nbody_nothrust.o: /usr/include/libio.h /usr/include/_G_config.h
-nbody_nothrust.o: /usr/include/wchar.h /usr/include/bits/stdio_lim.h
-nbody_nothrust.o: /usr/include/bits/sys_errlist.h /usr/include/stdlib.h
-nbody_nothrust.o: /usr/include/bits/waitflags.h
-nbody_nothrust.o: /usr/include/bits/waitstatus.h /usr/include/alloca.h
-nbody_nothrust.o: /usr/include/math.h /usr/include/bits/huge_val.h
-nbody_nothrust.o: /usr/include/bits/huge_valf.h /usr/include/bits/huge_vall.h
-nbody_nothrust.o: /usr/include/bits/inf.h /usr/include/bits/nan.h
-nbody_nothrust.o: /usr/include/bits/mathdef.h /usr/include/bits/mathcalls.h
-nbody_nothrust.o: /usr/include/sys/time.h /usr/include/signal.h
-nbody_nothrust.o: /usr/include/bits/signum.h /usr/include/bits/siginfo.h
-nbody_nothrust.o: /usr/include/bits/sigaction.h
-nbody_nothrust.o: /usr/include/bits/sigcontext.h /usr/include/bits/sigstack.h
-nbody_nothrust.o: /usr/include/sys/ucontext.h /usr/include/bits/sigthread.h
